--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       <!-- link tree button -->
       <div class="link">
-        <a href="https://instagram.com/danzzwaelah" target="_blank">instagram</a>
+        <a href="https://instagram.com/mazidansyukri" target="_blank">instagram</a>
         <a href="https://t.me/danzz_syu" target="_blank">telegram</a>
         <a href="https://wa.me/+6285860796742" target="_blank">whatsapp</a>
       </div>
